--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "daisyui": "^3.0.1"
+
   }
 }
